<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linear_layout_root"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/button_change_background"
        android:text="@string/str_change_background"
        android:layout_marginTop="10dp"
        style="@style/Button.BaseWidth"/>

    <Button
        android:id="@+id/button_ambient"
        android:text="@string/str_ambient"
        android:layout_marginTop="10dp"
        style="@style/Button.BaseWidth"/>

    <Button
        android:id="@+id/button_change_hours_ticks"
        android:text="@string/str_change_hours"
        android:layout_marginTop="10dp"
        style="@style/Button.BaseWidth"/>


    <Button
        android:id="@+id/button_change_minute_ticks"
        android:text="@string/str_change_minute"
        android:layout_marginTop="10dp"
        style="@style/Button.BaseWidth"/>

    <Button
        android:id="@+id/button_change_second_tick"
        android:layout_marginTop="10dp"
        android:text="@string/str_change_second"
        style="@style/Button.BaseWidth"/>

    <Button
        android:id="@+id/button_ticks_configuration"
        android:layout_marginTop="10dp"
        android:text="@string/str_ticks_confihuration"
        style="@style/Button.BaseWidth"/>

    <Button
        android:id="@+id/button_change_save_configuration"
        android:layout_marginTop="10dp"
        android:text="@string/str_save_config"
        style="@style/Button.BaseWidth"/>


</LinearLayout>